--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -44,8 +44,8 @@ ja:
       updated: 'アカウント情報を変更しました。'
     sessions:
       signed_in: 'ログインしました。'
-      signed_out: 'ログアウトしました。'
-      already_signed_out: '既にログアウト済みです。'
+      signed_out: 'しました。'
+      already_signed_out: '既に済みです。'
     unlocks:
       send_instructions: 'アカウントの凍結解除方法を数分以内にメールでご連絡します。'
       send_paranoid_instructions: 'アカウントが見つかった場合、アカウントの凍結解除方法を数分以内にメールでご連絡します。'
